fix: thread separator border color and spacing

--- a/src/v2/styles/_utils.scss
+++ b/src/v2/styles/_utils.scss
@@ -144,7 +144,7 @@
     }
 
     .str-chat__parent-message-li {
-      margin-inline: calc(-1 * #{$spacing});
+      margin-inline: calc(-1 * #{$spacing} - 2px);
     }
   }
 }
